quitar warnings